--- a/twitterfrontend/package.json
+++ b/twitterfrontend/package.json
@@ -19,8 +19,8 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
-    "react-tap-event-plugin": "^3.0.3",
     "web-vitals": "^2.1.4",
+    "yarn": "^1.22.22",
     "yup": "^1.4.0"
   },
   "scripts": {
