--- a/twitterfrontend/package.json
+++ b/twitterfrontend/package.json
@@ -17,7 +17,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-tabs": "^6.0.2",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.22",
