--- a/twitterBackend/src/main/resources/application.properties
+++ b/twitterBackend/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=twitterBackend
-debug=true
-spring.datasource.url=jdbc:mysql://localhost:3306/your_database_name
-spring.datasource.username=your_username
-spring.datasource.password=your_password
+
+server.port=5454
+
+#db specific properties
+spring.datasource.url=jdbc:mysql://localhost:3306/twitter
+spring.datasource.username=root
+spring.datasource.password=root@123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
