--- a/twitterfrontend/package.json
+++ b/twitterfrontend/package.json
@@ -8,20 +8,25 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.6",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "react-tabs": "^6.0.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.22",
-    "yup": "^1.4.0"
+    "yup": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
