--- a/twitterBackend/src/main/resources/application.properties
+++ b/twitterBackend/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.datasource.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+
+spring.resources.static-locations=classpath:/static/
+spring.web.resources.static-locations=classpath:/static/,classpath:/public/
+
