--- a/twitterBackend/src/main/resources/application.properties
+++ b/twitterBackend/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.resources.static-locations=classpath:/static/
 spring.web.resources.static-locations=classpath:/static/,classpath:/public/
 
+server.error.include-stacktrace=never
